config Jenkinsfile and package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sample Node.js (Express) app for AWS Elastic Beanstalk",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "echo No real tests yet && exit 0"
   },
   "repository": {
     "type": "git",
